[ci skip] Fix a sidebar issue when charts were displaying it would get too narrow.

--- a/themes/Admin/css/admin.css
+++ b/themes/Admin/css/admin.css
@@ -66,7 +66,7 @@ a:hover {
  */
 
 .sidebar {
-    width: 220px;
+    /* width: 220px; */
     top: 0;
     left: 0;
     bottom: 0;
@@ -80,7 +80,7 @@ a:hover {
 
 .sidebar-wrap {
     padding-bottom: 50px;
-    /*overflow-y: scroll;*/
+    width: 220px;
 }
 
 .sidebar-wrap .sidebar-toggle {
@@ -200,7 +200,7 @@ a:hover {
 }
 
 /* Collapsed Sidebar */
-.sidebar.collapsed {
+.sidebar.collapsed .sidebar-wrap {
     width: 45px;
 }
 
